--- a/src/js/templates/loading.html
+++ b/src/js/templates/loading.html
@@ -1,12 +1,19 @@
 <style>
 /**
- * Loading page progress bars	
+ * Loading page progress bars
  * http://css-tricks.com/css3-progress-bars/
  */
-	.meter { 
-		height: 20px;  /* Can be anything */
+ 	.meter-wrapper{
+ 		position: relative;
+		top:50%;
+ 	}
+
+	.meter {
+		height: 30px;  /* Can be anything */
 		position: relative;
-		margin: 9%; /* Just for demo spacing */
+		margin-left: auto; margin-right: auto;
+		margin-top:-15px;
+		width:82%;
 		background: #555;
 		-moz-border-radius: 25px;
 		-webkit-border-radius: 25px;
@@ -44,13 +51,13 @@
 		  rgb(43,194,83) 37%,
 		  rgb(84,240,84) 69%
 		 );
-		-webkit-box-shadow: 
+		-webkit-box-shadow:
 		  inset 0 2px 9px  rgba(255,255,255,0.3),
 		  inset 0 -2px 6px rgba(0,0,0,0.4);
-		-moz-box-shadow: 
+		-moz-box-shadow:
 		  inset 0 2px 9px  rgba(255,255,255,0.3),
 		  inset 0 -2px 6px rgba(0,0,0,0.4);
-		box-shadow: 
+		box-shadow:
 		  inset 0 2px 9px  rgba(255,255,255,0.3),
 		  inset 0 -2px 6px rgba(0,0,0,0.4);
 		position: relative;
@@ -60,23 +67,23 @@
 		content: "";
 		position: absolute;
 		top: 0; left: 0; bottom: 0; right: 0;
-		background-image: 
-		   -webkit-gradient(linear, 0 0, 100% 100%, 
-			  color-stop(.25, rgba(255, 255, 255, .2)), 
-			  color-stop(.25, transparent), color-stop(.5, transparent), 
-			  color-stop(.5, rgba(255, 255, 255, .2)), 
-			  color-stop(.75, rgba(255, 255, 255, .2)), 
+		background-image:
+		   -webkit-gradient(linear, 0 0, 100% 100%,
+			  color-stop(.25, rgba(255, 255, 255, .2)),
+			  color-stop(.25, transparent), color-stop(.5, transparent),
+			  color-stop(.5, rgba(255, 255, 255, .2)),
+			  color-stop(.75, rgba(255, 255, 255, .2)),
 			  color-stop(.75, transparent), to(transparent)
 		   );
-		background-image: 
+		background-image:
 			-moz-linear-gradient(
-			  -45deg, 
-			  rgba(255, 255, 255, .2) 25%, 
-			  transparent 25%, 
-			  transparent 50%, 
-			  rgba(255, 255, 255, .2) 50%, 
-			  rgba(255, 255, 255, .2) 75%, 
-			  transparent 75%, 
+			  -45deg,
+			  rgba(255, 255, 255, .2) 25%,
+			  transparent 25%,
+			  transparent 50%,
+			  rgba(255, 255, 255, .2) 50%,
+			  rgba(255, 255, 255, .2) 75%,
+			  transparent 75%,
 			  transparent
 		   );
 		z-index: 1;
@@ -97,11 +104,11 @@
 				 border-bottom-left-radius: 20px;
 		overflow: hidden;
 	}
-	
+
 	.animate > span:after {
 		display: none;
 	}
-	
+
 	@-webkit-keyframes move {
 		0% {
 		   background-position: 0 0;
@@ -110,38 +117,28 @@
 		   background-position: 50px 50px;
 		}
 	}
-	
+
 	.orange > span {
 		background-color: #f1a165;
 		background-image: -moz-linear-gradient(top, #f1a165, #f36d0a);
 		background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f1a165),color-stop(1, #f36d0a));
-		background-image: -webkit-linear-gradient(#f1a165, #f36d0a); 
+		background-image: -webkit-linear-gradient(#f1a165, #f36d0a);
 	}
-	
+
 	.red > span {
 		background-color: #f0a3a3;
 		background-image: -moz-linear-gradient(top, #f0a3a3, #f42323);
 		background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #f0a3a3),color-stop(1, #f42323));
 		background-image: -webkit-linear-gradient(#f0a3a3, #f42323);
 	}
-	
+
 	.nostripes > span > span, .nostripes > span:after {
 		-webkit-animation: none;
 		background-image: none;
 	}
-	
-	#pilogo {		
-		margin-left: auto; margin-right: auto;
-		margin-top: 10%;
-		display: block;
-	    max-width: 50%;
-	    height: auto;
-	    width: auto\9; /* ie8 */		
-	}
 </style>
 
-<div>
-	<img id="pilogo" src="images/pilogo.jpg">
+<div class="meter-wrapper">
 	<div class="meter">
 		<span style="width: 0%"></span>
 	</div>
