open docco to blank tab

--- a/resources/templates/pipDirectory.jade
+++ b/resources/templates/pipDirectory.jade
@@ -20,7 +20,7 @@ block content
 				span.badge.badge-js
 					a(href="../"+file.js download) download
 				span.badge.badge-docco
-					a(href=file.docco) view
+					a(href=file.docco target="_blank") view
 
 
 
