--- a/resources/templates/template.jade
+++ b/resources/templates/template.jade
@@ -8,8 +8,6 @@ html
 
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
-
-
 		link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css')
 
 		// If we ever need the js stuff...
@@ -40,7 +38,7 @@ html
 
 				nav#navbar.navbar-collapse.bs-navbar-collapse(role="navigation")
 					ul.nav.navbar-nav
-						li: a(href="../tutorials" class="{folder=='tutorial'}") Tutorial
+						li: a(href="../tutorials") Tutorial
 						li: a(href="../snippets") Snippets
 						li: a(href="../examples") Examples
 						li: a(href="../tutorials/API.html") API
