set directory paths to index.html

--- a/resources/templates/template.jade
+++ b/resources/templates/template.jade
@@ -38,9 +38,9 @@ html
 
 				nav#navbar.navbar-collapse.bs-navbar-collapse(role="navigation")
 					ul.nav.navbar-nav
-						li: a(href="../tutorials") Tutorial
-						li: a(href="../snippets") Snippets
-						li: a(href="../examples") Examples
+						li: a(href="../tutorials/index.html") Tutorial
+						li: a(href="../snippets/index.html") Snippets
+						li: a(href="../examples/index.html") Examples
 						li: a(href="../tutorials/API.html") API
 						li: a(href="../user") Your Files
 					ul.nav.navbar-nav.navbar-right
