--- a/resources/templates/pipDirectory.jade
+++ b/resources/templates/pipDirectory.jade
@@ -16,7 +16,7 @@ block content
 	ul#directory-list.list-group
 		each file in files
 			li.list-group-item
-				a(target="_blank" href="../../src/index.html?url="+file.js )=file.name
+				a(target="_blank" href=player+file.js )=file.name
 				span.badge.badge-js
 					a(href="../"+file.js download) download
 				span.badge.badge-docco
