slideshow tutorial and fixes

--- a/resources/templates/template.jade
+++ b/resources/templates/template.jade
@@ -38,7 +38,7 @@ html
 
 				nav#navbar.navbar-collapse.bs-navbar-collapse(role="navigation")
 					ul.nav.navbar-nav
-						li: a(href="../tutorials/index.html") Tutorial
+						li: a(href="../tutorials/overview.html") Tutorial
 						li: a(href="../snippets/index.html") Snippets
 						li: a(href="../examples/index.html") Examples
 						li: a(href="../tutorials/API.html") API
