--- a/resources/templates/tutorials.jade
+++ b/resources/templates/tutorials.jade
@@ -15,6 +15,6 @@ block content
 				li: a(href='./overview.html') Overview
 				li: a(href='./javascript.html') Javascript
 				li: a(href='./hello.html') Hello world
-				//li: a(href='./API.md') Slideshow tutorial
+				li: a(href='./slideshow.html') Slideshow
 		div.col-md-9
 			!=content
