--- a/resources/templates/template.jade
+++ b/resources/templates/template.jade
@@ -17,6 +17,11 @@ html
 		style.
 			div#main {padding-top:50px}
 			.sidenav {background-color: #F7F5FA;border-radius: 5px;margin-bottom: 30px;margin-top: 30px;padding-bottom: 10px;padding-top: 10px;text-shadow: 0 1px 0 #FFFFFF;}
+			.sidenav.nav li > a {color: #999999;display: block;font-size: 13px;font-weight: 600;padding: 5px 20px;}
+			.sidenav.nav li > a:hover {text-decoration:none;color: #563D7C;}
+			.sidenav.nav .nav > li > a {font-weight: 500; padding: 3px 0px 3px 30px}
+
+
 			.badge-js {background-color: #f89406;}
 			.badge-js:hover {background-color: #c67605;}
 			.badge-docco {background-color: #468847;}
