--- a/resources/templates/tutorials.jade
+++ b/resources/templates/tutorials.jade
@@ -16,5 +16,13 @@ block content
 				li: a(href='./javascript.html') Javascript
 				li: a(href='./hello.html') Hello world
 				li: a(href='./slideshow.html') Slideshow
+				li
+					a(href='javascript:void(0)') Stroop
+					ul.nav
+						li: a(href='./stroop-setup.html') Setup
+						li: a(href='./stroop-interactions.html') Interactions
+						li: a(href='./stroop-inheritance.html') Inheritance
+						li: a(href='./stroop-block.html') Block
+						li: a(href='./stroop-task.html') Task
 		div.col-md-9
 			!=content
