--- a/resources/templates/template.jade
+++ b/resources/templates/template.jade
@@ -5,7 +5,8 @@ html
 
 	head
 		title=title||'Project Implicit'
-
+		meta(http-equiv="X-UA-Compatible" content="IE=edge,chrome=1")
+		meta(charset='utf-8')
 		meta(name='viewport', content='width=device-width, initial-scale=1.0')
 
 		link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css')
