--- a/resources/templates/tutorials.jade
+++ b/resources/templates/tutorials.jade
@@ -13,6 +13,7 @@ block content
 		div.col-md-3
 			ul.nav.affix-top.sidenav
 				li: a(href='./overview.html') Overview
+				li: a(href='./install.html') Install
 				li: a(href='./javascript.html') Javascript
 				li: a(href='./hello.html') Hello world
 				li: a(href='./slideshow.html') Slideshow
