--- a/0.3/css/style.css
+++ b/0.3/css/style.css
@@ -52,6 +52,10 @@ body {
   font-weight: 500;
   color: #563d7c; }
 
+.bs-docs-nav .navbar-brand {
+  font-weight: 700;
+  font-family: Georgia, "Times New Roman", Times, serif; }
+
 .bs-docs-nav .navbar-nav > li > a:hover,
 .bs-docs-nav .navbar-nav > .active > a,
 .bs-docs-nav .navbar-nav > .active > a:hover {
