--- a/src/css/main.css
+++ b/src/css/main.css
@@ -88,6 +88,10 @@ a img {
 [pi-player] .stimulus {
   position: absolute;
   text-align: center;
-  overflow: hidden; }
+  overflow: hidden;
+  opacity: 0; }
+
+[pi-player] .minno-stimulus-visible {
+  opacity: 1; }
 
 /*# sourceMappingURL=main.css.map */
