--- a/src/css/main.css
+++ b/src/css/main.css
@@ -87,10 +87,10 @@ a img {
   position: absolute;
   text-align: center;
   overflow: hidden;
-  opacity: 0; }
+  visibility: hidden; }
 
 .minno-stimulus-visible {
-  opacity: 1; }
+  visibility: visible; }
 
 .minno-progress {
   background-color: #20201F;
