--- a/src/css/main.css
+++ b/src/css/main.css
@@ -92,6 +92,17 @@ a img {
 .minno-stimulus-visible {
   visibility: visible; }
 
+.minno-stimulus-center-x {
+  left: 50%;
+  transform: translateX(-50%); }
+
+.minno-stimulus-center-y {
+  top: 50%;
+  transform: translateY(-50%); }
+
+.minno-stimulus-center-y.minno-stimulus-center-x {
+  transform: translate(-50%, -50%); }
+
 .minno-progress {
   background-color: #20201F;
   border-radius: 20px;
@@ -105,7 +116,7 @@ a img {
 
 .minno-progress-bar {
   background-color: #807b7a;
-  width: 48%;
+  width: 0%;
   /* Adjust with JavaScript */
   height: 16px;
   border-radius: 10px; }
